fix: prevent overflow when using pre tag inside gateway fields from error

--- a/src/NextGen/DonationForm/resources/styles/_base-overrides.scss
+++ b/src/NextGen/DonationForm/resources/styles/_base-overrides.scss
@@ -32,3 +32,7 @@ input[aria-invalid="false"] {
 h1, h2, h3, h4, h5, h6 {
   --typography-spacing-vertical: 1rem;
 }
+
+pre {
+  white-space: break-spaces;
+}
